# channel-policy-router

./: Dockerfile  README.md  alembic.ini  docker-compose.postgres.yml  pyproject.toml
.github/workflows/: ci.yml  image-publish.yml
alembic/: env.py
alembic/versions/: 20260414_0001_initial_schema.py
contracts/: openapi-v1.json
docs/: architecture-deep-dive.md
docs/runbooks/: incident-rollback-recovery.md
scripts/: export_openapi.py  init_postgres.sql  migrate_postgres.sh  run_incident_delivery_worker.py  run_postgres_integration_tests.sh  run_sla_evaluator.py
src/channel_policy_router/: __init__.py  main.py  settings.py
src/channel_policy_router/adapters/inbound/http/: router.py  schemas.py
src/channel_policy_router/adapters/outbound/: in_memory.py  postgres.py
src/channel_policy_router/application/: policy.py  uow.py  use_cases.py
src/channel_policy_router/domain/: entities.py  errors.py  repositories.py
src/channel_policy_router/security/: auth.py
tests/: conftest.py  test_api_smoke.py  test_auth_config.py  test_openapi_contract.py  test_postgres_integration.py
